opam-version: "1.2"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Christophe Troestler <Christophe.Troestler@umons.ac.be>" ]
tags: ["lpd" "print"]
license: "LGPL-3.0 with OCaml linking exception"
homepage: "http://lpd.forge.ocamlcore.org/"
dev-repo: "https://github.com/Chris00/lpd.git"
bug-reports: "https://github.com/Chris00/lpd/issues"
doc: "https://Chris00.github.io/lpd/doc"
build: [
  [ "jbuilder" "subst" ] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]
depends: [
  "jbuilder" {build}
  "base-bytes"
  "base-unix"
]
